feat(preventive-works): сделана функция добавления новой профилактической работы, данные сохраняются в бд
