# preventive-works/docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:8101",
     "paths": {
         "/": {
             "get": {
@@ -27,31 +27,6 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/models.PreventiveWork"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/event": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Event"
-                ],
-                "summary": "отображение всех профилактических работ",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Event"
                             }
                         }
                     }
@@ -122,7 +97,7 @@
                 "summary": "отображение профилактической работы по id",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "PreventiveWork id",
                         "name": "id",
                         "in": "path",
@@ -147,7 +122,7 @@
                 "summary": "добавление новой профилактической работы",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "id профилактической работы",
                         "name": "id",
                         "in": "path",
@@ -203,12 +178,6 @@
                 "description": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
-                "id_preventive_work": {
-                    "type": "integer"
-                },
                 "status": {
                     "type": "string"
                 }
@@ -217,9 +186,6 @@
         "models.PreventiveWork": {
             "type": "object",
             "properties": {
-                "count_event": {
-                    "type": "integer"
-                },
                 "create_at": {
                     "type": "string"
                 },
@@ -236,10 +202,10 @@
                     }
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "id_service": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
